# polyrob

./: .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASING.md  SECURITY.md  THIRD-PARTY-NOTICES.md  TRADEMARK.md  docker-compose.yml  install.sh  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
agents/: README.md  __init__.py  base_agent.py  task_agent_lite.py
api/: README.md  TASK_API_DOCS.md  admin_endpoints.py  app.py  auth_constants.py  auth_endpoints.py  auth_state.py  chat_via_task.py  conversation_manager.py  dependencies.py  eip8004_endpoints.py  hyperliquid_models.py  hyperliquid_routes.py  interfaces.py  jwt_middleware.py  mcp_models.py  mcp_routes.py  middleware.py  models.py  payment_endpoints.py  payment_verification.py  polymarket_models.py  polymarket_routes.py  pricing_endpoints.py  session_routing.py  skill_endpoints.py  task_http_api.py  webhooks.py  x402_endpoints.py
assets/: __init__.py
avatar/: README.md  __init__.py  mindprint.js  studio.html
cli/: README.md  cli_surface.py  config_store.py  gitignore.py  inventory.py  keys.py  persona.py  polyrob.py
config/: .env.development.template  .env.example  .env.production.example  ENV_FILE_README.md  mcp_config.json
core/: README.md  __init__.py  activity_evidence.py  assets.py  async_bridge.py  autonomy_runtime.py  backoff.py  base_component.py  bootstrap.py  bot.py  config.py  config_service.py  constants.py  container.py  contract_writer.py  credit_sentinel.py  db_manifest.py  embedding.py  env.py  env_file.py  event_kinds.py  exceptions.py  flags.py  flags_catalog.py  gitignore.py  home_migration.py  identity.py  initialization.py  instance.py  interactive_gate.py  knowledge_export.py  logging.py  owner_doc_writer.py  pairing.py  path_safety.py  paths.py  payment_config.py  permissions.py  prefs.py  rate_limit.py  (+18 more)
cron/: README.md  delivery.py  digest.py  jobs.py  runner.py  schedule.py  scheduler.py  service.py  wake_gate.py
data/: __init__.py
datagen/: __init__.py  assemble.py  batch_runner.py  bulk_export.py  capture.py  formats.py  record.py  scrub.py  toolset_distributions.py
docs/: CONFIGURATION.md  SKILL_AUTHORING_STANDARD.md  comparison.md  examples.md
migrations/: README.md  boot.py  migrate.py  version_manager.py
modules/: README.md  __init__.py  base_module.py
surfaces/: README.md
tests/: conftest.py  test_a2a_protocol.py  test_accessibility_snapshot.py  test_changelog_release.py  test_core_platform_boundary.py  test_core_server_boundary.py  test_doc_consistency.py  test_dynamic_pricing.py  test_embedder_needed.py  test_file_size_ratchet.py  test_gemini_fixes.py  test_import_layering.py  test_layering_ratchet.py  test_lazy_embedder.py  test_llm_timeout_ssot.py  test_mcp_tool_fix.py  test_numeric_env_parse_ratchet.py  test_path_ratchet.py  test_public_files_present.py  test_rate_limiter_ratchet.py  test_rename_tail.py  test_schema_version.py  test_version_consistency.py
tools/: README.md  __init__.py  base_tool.py  cronjob_tools.py  crypto_trade_gate.py  descriptors.py  email_tool.py  exceptions.py  filesystem.py  filesystem_docproc.py  filesystem_pdf.py  goal_tools.py  knowledge_ingest.py  perplexity_tool.py  (+4 more)
(+1972 files in other folders)
